unpackaged/main/default/objects/project_cloud__Timesheet__c/project_cloud__Timesheet__c.object-meta.xml
<CustomObject>
    <description>Timesheets of users in your system</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>