unpackaged/main/default/objects/project_cloud__Timesheet__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <description>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</description>
    <formula>project_cloud__Start__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</inlineHelpText>
    <label>End</label>
    <type>Date</type>
</CustomField>