unpackaged/main/default/objects/project_cloud__Timesheet__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <description>This is a hash of the OwnerId of the Timesheet and the start date, it is used by the validation rule to enforce unique timesheets</description>
    <formula>CASESAFEID(OwnerId) + TEXT(YEAR(project_cloud__Start__c)) + &#39;-&#39; + TEXT(MONTH(project_cloud__Start__c)) + &#39;-&#39; + TEXT(DAY(project_cloud__Start__c))</formula>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Hash</label>
    <type>Text</type>
</CustomField>