unpackaged/main/default/objects/project_cloud__Timesheet__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <description>The date the Timesheet entries can begin</description>
    <inlineHelpText>The first day of the Timesheet</inlineHelpText>
    <label>Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>