unpackaged/main/default/objects/project_cloud__Timesheet__c/fields/project_cloud__Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Status__c</fullName>
    <inlineHelpText>The status of the timesheet. Used in timesheet approvals</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>