unpackaged/main/default/objects/project_cloud__Timesheet__c/fields/project_cloud__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Worked_Hours__c</fullName>
    <inlineHelpText>The sum of hours from the underlying work records</inlineHelpText>
    <label>Entered Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>