unpackaged/main/default/objects/project_cloud__Timesheet__c/listViews/project_cloud__All_Timesheets.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Timesheets</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>project_cloud__Start__c</columns>
    <columns>project_cloud__End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>